--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,6 @@ html, body{
     font-size: 30px;
     font-weight: 500;
     color: var(--text-color);
-    padding-bottom: 15px;
 }
 
 main{
